--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@ if (navigator.mediaDevices.getUserMedia) {
 			//loader.load('obj/myfemale4/genesisfemale-5.js', function (geometry) {
 			    //loader.load( 'obj/books/tpomA.js', function( geometry ) {
 				 
-				//loader.load( 'obj/models/spaceshuttle.js', function( geometry ) {
-			 loader2.load( 'obj/models/world.js', function( geometry ) {
+				///loader.load( 'obj/models/spaceshuttle.js', function( geometry ) {
+			 loader.load( 'obj/models/world.js', function( geometry ) {
 				//loader.load( 'obj/models/Helmet_base-model.js', function( geometry ) {
 				 
 			//loader.load( 'obj/models/building_model.js', function( geometry ) {
