--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ if (navigator.mediaDevices.getUserMedia) {
 				scene.add( mesh );
 				 mesh.scale.set( 0.2, 0.2, 0.2 );
 				mesh.position.set( 0, -7, 0 );
-			material.visible = false;
+			//material.visible = false;
 					// Setsup mesh rotation animation.
 	  function rotateObject(object, degreeX=0, degreeY= 0, degreeZ=0){
 			
