--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ if (navigator.mediaDevices.getUserMedia) {
                                 //emissive: 0x154360,
 								map: textureLoader.load('Images/earth-day.jpg'),
                               //envMap: scCube,
-							  opacity = .000001
+							  opacity = .000001,
 								specular: 0x050505,
 				shininess: 3
 				} );
