--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@ if (navigator.mediaDevices.getUserMedia) {
 								map: textureLoader.load('Images/earth-day.jpg'),
                               //envMap: scCube,
 							  opacity: .0000001,
-								specular: 0x050505,
-				shininess: 3
+								//specular: 0x050505,
+				//shininess: 3
 				} );
 
 				mesh = new THREE.Mesh( geometry, material );
