--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ if (navigator.mediaDevices.getUserMedia) {
 				  var material = new THREE.MeshPhongMaterial( {
 				    side: THREE.DoubleSide,
                                 //emissive: 0x154360,
-								//map: textureLoader.load('Images/earth-day.jpg'),
+								map: textureLoader.load('Images/earth-day.jpg'),
                               //envMap: scCube,
 							  opacity: .0000001,
 								//specular: 0x050505,
