--- a/index.html
+++ b/index.html
@@ -240,14 +240,14 @@ if (navigator.mediaDevices.getUserMedia) {
 			    //loader.load( 'obj/books/tpomA.js', function( geometry ) {
 				 
 				///loader.load( 'obj/models/spaceshuttle.js', function( geometry ) {
-			 loader.load( 'obj/models/LBJ_setup.js', function( geometry ) {
+			 loader.load( 'obj/models/world.js', function( geometry ) {
 				//loader.load( 'obj/models/Helmet_base-model.js', function( geometry ) {
 				 
 			//loader.load( 'obj/models/building_model.js', function( geometry ) {
 				  var material = new THREE.MeshPhongMaterial( {
 				    side: THREE.DoubleSide,
                                 //emissive: 0x154360,
-								map: textureLoader.load('10240_Office_Desk_v2_Diffuse.jpg'),
+								map: textureLoader.load('Images/earth-day.jpg'),
                               //envMap: scCube,
 							  opacity: .0000001,
 								//specular: 0x050505,
