--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ if (navigator.mediaDevices.getUserMedia) {
 			    //loader.load( 'obj/books/tpomA.js', function( geometry ) {
 				 
 				///loader.load( 'obj/models/spaceshuttle.js', function( geometry ) {
-			 loader.load( 'obj/models/default.js', function( geometry ) {
+			 loader.load( 'obj/models/LBJ_setup.js', function( geometry ) {
 				//loader.load( 'obj/models/Helmet_base-model.js', function( geometry ) {
 				 
 			//loader.load( 'obj/models/building_model.js', function( geometry ) {
