--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ if (navigator.mediaDevices.getUserMedia) {
 			 loader.load( 'obj/models/LBJ_setup.js', function( geometry ) {
 				//loader.load( 'obj/models/Helmet_base-model.js', function( geometry ) {
 				 
-			//loader.load( 'obj/models/building_model.js', function( geometry ) {
+			///loader.load( 'obj/models/building_model.js', function( geometry ) {
 				  var material = new THREE.MeshPhongMaterial( {
 				    side: THREE.DoubleSide,
                                 //emissive: 0x154360,
