--- a/index.html
+++ b/index.html
@@ -462,10 +462,10 @@ rotateObject2(mesh2, -90,0,0);
 	onRenderFcts.push(function(){
 		renderer.render( scene, camera );
 		
-		mesh.rotation.y = mesh.rotation.y - 0.01;
-		mesh2.rotation.y = mesh.rotation.y - 0.01;
+		//mesh.rotation.y = mesh.rotation.y - 0.01;
+		//mesh2.rotation.y = mesh.rotation.y - 0.01;
 		 
-			particleSystem.update( tick );
+			//particleSystem.update( tick );
 //camera.rotation.y = 90;
 			//render();
 			stats.update();
