--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ if (navigator.mediaDevices.getUserMedia) {
 	function loadMymodelII( callback ) {
 		var loader2 = new THREE.JSONLoader();
 		//loader2.load( 'obj/models/world.js', function( geometry ) {
-		loader2.load( 'obj/models/LBJ_model_II.js', function( geometry ) {
+		loader2.load( 'obj/models/LBJ_body.js', function( geometry ) {
 		 var material = new THREE.MeshPhongMaterial( {
 				    side: THREE.DoubleSide,
                                 //emissive: 0x154360,
