--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ if (navigator.mediaDevices.getUserMedia) {
  
                               //envMap: scCube,
 								//specular: 0x050505,
-				shininess: 1
+				//shininess: 1
 				} );
  
 				mesh2 = new THREE.Mesh( geometry, material );
