--- a/index.html
+++ b/index.html
@@ -81,13 +81,7 @@
 			controls, container, gui = new dat.GUI( { width: 100 } ),
 			options, spawnerOptions, particleSystem;
 
-				
- 
- 
- 
- 
- 
-  container = document.getElementById( 'container' );
+		 container = document.getElementById( 'container' );
  	
 		
  var renderer	= new THREE.WebGLRenderer({
@@ -95,7 +89,8 @@
 		alpha: true
 	});
 //renderer.setClearColor(new THREE.Color('lightgrey'), 0)
-	renderer.setSize( 1024, 768 );
+	//renderer.setSize( 1024, 768 );
+	renderer.setSize( 1280, 800 );
 	renderer.domElement.style.position = 'absolute'
 	renderer.domElement.style.top = '0px'
 	renderer.domElement.style.left = '0px'
