--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
 	});
 //renderer.setClearColor(new THREE.Color('lightgrey'), 0)
 	//renderer.setSize( 1024, 768 );
-	renderer.setSize( 1280, 800 );
+	//renderer.setSize( 1280, 800 );
+	renderer.setSize( window.innerWidth, window.innerHeight );
 	renderer.domElement.style.position = 'absolute'
 	renderer.domElement.style.top = '0px'
 	renderer.domElement.style.left = '0px'
