--- a/index.html
+++ b/index.html
@@ -89,9 +89,8 @@
 		alpha: true
 	});
 //renderer.setClearColor(new THREE.Color('lightgrey'), 0)
-	//renderer.setSize( 1024, 768 );
-	//renderer.setSize( 1280, 800 );
-	renderer.setSize( window.innerWidth, window.innerHeight );
+renderer.setSize( 1024, 768 );
+	 
 	renderer.domElement.style.position = 'absolute'
 	renderer.domElement.style.top = '0px'
 	renderer.domElement.style.left = '0px'
