--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ transparent : true,
 					shininess: 0
 				} );
 
-				mesh = new THREE.Mesh( geometry, material );
+			var	mesh = new THREE.Mesh( geometry, material );
 				
 				scene.add( mesh );
 				mesh.scale.set( 0.8, 0.8, 0.8 );
