--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
 			//loader.load('obj/myfemale4/genesisfemale-5.js', function (geometry) {
 			    //loader.load( 'obj/books/tpomA.js', function( geometry ) {
 				//loader.load( 'obj/books/bandmd.js', function( geometry ) {
-				loader.load( 'obj/models/spaceshuttle.js', function( geometry ) {
-
+				//loader.load( 'obj/models/spaceshuttle.js', function( geometry ) {
+loader.load( 'obj/models/LBJ_body.js', function( geometry ) {
 
 				var material = new THREE.MeshPhongMaterial( {
 				    specular: 0x211111,
@@ -220,7 +220,7 @@ transparent : true,
 							//book
 				   // map: textureLoader.load('obj/books/diffuse_Image_1_AtlasUVs.jpg'),
                     //ambientMap: textureLoader.load('obj/books/ambient_Image_1_AtlasUVs.jpg'),
-					
+					map: textureLoader.load('Images/diffuse_Image_1_LBJ_sub.jpg'),
 					
 					//female
 					//map: textureLoader.load( 'obj/myfemale4/diffuse_Image_1_genesis5.jpg' ),
