--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ transparent : true,
 			object.rotateZ(THREE.Math.degToRad(degreeZ));
 }
 //to sit standing up
-//rotateObject(mesh, -90,-90,-90);
+rotateObject(mesh, -90,-90,-90);
 rotateObject(mesh, 0,0,0);
 
 
