--- a/index.html
+++ b/index.html
@@ -189,13 +189,13 @@
 	///////////////////////////////////////////////
 	//			Add Lights						 //
 	//////////////////////////////////////////////
-	var light = new THREE.DirectionalLight( 0xccccff, -10 );
+	var light = new THREE.DirectionalLight( 0xccccff, 1 );
 			light.position.set( 100, 100, 100 );
-			scene.add( light );
+			//scene.add( light );
 			
-			var light = new THREE.DirectionalLight( 0xffddcc, -10 );
+			var light = new THREE.DirectionalLight( 0xffddcc, 1 );
 			light.position.set( 100, 100, 100 );
-			scene.add( light );
+			//scene.add( light );
 	/////////////////////////////////////////////////////
 	//     add json object                             //
 	/////////////////////////////////////////////////////
