--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 		alpha: true
 	});
 	//renderer.setClearColor(new THREE.Color('lightgrey'), 0)
-	renderer.setSize( 640, 480 );
+	 renderer.setSize( window.innerWidth, window.innerHeight );
+	 renderer.setPixelRatio( window.devicePixelRatio );
 	renderer.domElement.style.position = 'absolute'
 	renderer.domElement.style.top = '0px'
 	renderer.domElement.style.left = '0px'
