--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 			    //loader.load( 'obj/books/tpomA.js', function( geometry ) {
 				//loader.load( 'obj/books/bandmd.js', function( geometry ) {
 				//loader.load( 'obj/models/spaceshuttle.js', function( geometry ) {
-loader.load( 'obj/models/LBJ_body.js', function( geometry ) {
+//loader.load( 'obj/models/LBJ_body.js', function( geometry ) {
 
 				var material = new THREE.MeshPhongMaterial( {
 				    specular: 0x211111,
