--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
 		alpha: true
 	});
 	var fov = 45;
-	
 	//renderer.setClearColor(new THREE.Color('lightgrey'), 0)
 	 renderer.setSize( window.innerWidth, window.innerHeight );
 	 renderer.setPixelRatio( window.devicePixelRatio );
@@ -87,9 +86,7 @@
 	//////////////////////////////////////////////////////////////////////////////////
 
 	// Create a camera
-	 			camera = new THREE.PerspectiveCamera( fov, window.innerWidth / window.innerHeight, 1, 1000 );
-			camera.position.z = 10;
-			camera.target = new THREE.Vector3();
+	var camera = new THREE.Camera();
 	scene.add(camera);
 	
 	
