--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 			    //loader.load( 'obj/books/tpomA.js', function( geometry ) {
 				//loader.load( 'obj/books/bandmd.js', function( geometry ) {
 				//loader.load( 'obj/models/spaceshuttle.js', function( geometry ) {
-			loader.load( 'obj/models/LBJ_body.js', function( geometry ) {
+			loader.load( 'obj/models/LBJ_body_II.js', function( geometry ) {
 
 				var material = new THREE.MeshPhongMaterial( {
 				    specular: 0x211111,
@@ -222,7 +222,7 @@ transparent : true,
 							//book
 				   // map: textureLoader.load('obj/books/diffuse_Image_1_AtlasUVs.jpg'),
                     //ambientMap: textureLoader.load('obj/books/ambient_Image_1_AtlasUVs.jpg'),
-					map: textureLoader.load('Images/diffuse_Image_1_LBJ_ref.jpg'),
+					map: textureLoader.load('Images/diffuse_Image_1_LBJ_map_9.jpg'),
 					
 					//female
 					//map: textureLoader.load( 'obj/myfemale4/diffuse_Image_1_genesis5.jpg' ),
