--- a/index.html
+++ b/index.html
@@ -192,11 +192,11 @@
 	//			Add Lights						 //
 	//////////////////////////////////////////////
 	var light = new THREE.DirectionalLight( 0xffddcc, 1 );
-			light.position.set( 1, 0.75, -0.5 );
+			light.position.set( 1, 1, -5 );
 			scene.add( light );
 			
 			var light = new THREE.DirectionalLight( 0xccccff, 1 );
-			light.position.set( -1, 0.75, 0.5 );
+			light.position.set( -1, 1, 0.5 );
 			scene.add( light );
 	/////////////////////////////////////////////////////
 	//     add json object                             //
@@ -212,7 +212,7 @@
 			    //loader.load( 'obj/books/tpomA.js', function( geometry ) {
 				//loader.load( 'obj/books/bandmd.js', function( geometry ) {
 				//loader.load( 'obj/models/spaceshuttle.js', function( geometry ) {
-			loader.load( 'obj/models/LBJ_body_II.js', function( geometry ) {
+			loader.load( obj/models/LBJ_New_II.js', function( geometry ) {
 
 				var material = new THREE.MeshPhongMaterial( {
 				    specular: 0x211111,
@@ -222,7 +222,7 @@ transparent : true,
 							//book
 				   // map: textureLoader.load('obj/books/diffuse_Image_1_AtlasUVs.jpg'),
                     //ambientMap: textureLoader.load('obj/books/ambient_Image_1_AtlasUVs.jpg'),
-					map: textureLoader.load('Images/diffuse_Image_1_LBJ_fin_II.jpg'),
+					map: textureLoader.load('Images/diffuse_Image_1_LBJ_fin.jpg'),
 					
 					//female
 					//map: textureLoader.load( 'obj/myfemale4/diffuse_Image_1_genesis5.jpg' ),
@@ -236,7 +236,7 @@ transparent : true,
 				mesh = new THREE.Mesh( geometry, material );
 				
 				scene.add( mesh );
-				mesh.scale.set( 10, 10, 10 );
+				mesh.scale.set( 2, 2, 2 );
 					// Setsup mesh rotation animation.
 	  function rotateObject(object, degreeX=0, degreeY= 0, degreeZ=0){
 			
@@ -246,7 +246,7 @@ transparent : true,
 }
 //to sit standing up
 //rotateObject(mesh, -90,-90,-90);
-rotateObject(mesh, -180,0,0);
+rotateObject(mesh, -90,0,0);
 
 
 			} );
