--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 			    //loader.load( 'obj/books/tpomA.js', function( geometry ) {
 				//loader.load( 'obj/books/bandmd.js', function( geometry ) {
 				//loader.load( 'obj/models/spaceshuttle.js', function( geometry ) {
-			loader.load( obj/models/LBJ_New_II.js', function( geometry ) {
+			loader.load( 'obj/models/LBJ_New_II.js', function( geometry ) {
 
 				var material = new THREE.MeshPhongMaterial( {
 				    specular: 0x211111,
