--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ rotateObject(mesh, -90,0,0);
 	//		render the whole thing on the page
 	//////////////////////////////////////////////////////////////////////////////////
 
-	// render the scene
+	/// render the scene
 	onRenderFcts.push(function(){
 		renderer.render( scene, camera );
 		
