--- a/index.html
+++ b/index.html
@@ -223,7 +223,8 @@
 //transparent : true,
 		//opacity: 0.9,
 		   
-				map: textureLoader.load('Images/ph_diffuse_a!.jpg'),
+				//map: textureLoader.load('Images/ph_diffuse_a!.jpg'),
+				map: textureLoader.load('Images/pooh_new_diffuse.jpg'),
 				 //	side: THREE.DoubleSide,
                                 emissive: 0x154360,
 								color: 0x996633,
