--- a/index.html
+++ b/index.html
@@ -27,16 +27,28 @@
     background-color: #666;
 }-->
 
-#btn {
+ #btn {
     position: absolute;
     display: block;
     z-index: 99;
-    left: 0%;
-    top: 0%;
-	width: 30px;
+    left: 2%;
+    top: 90%;
+	width: 60px;
     height: 30px;
 	background-color: #0020FF
+	  color: cadetblue;
+    }
 	
+	#btn2 {
+    position: absolute;
+    display: block;
+    z-index: 99;
+    left: 10%;
+    top: 90%;
+	width: 60px;
+    height: 30px;
+	background-color: #0020FF
+	color: cadetblue;
     }
 	
 	 .a1{
@@ -51,7 +63,8 @@
 <!--<video autoplay = "true" id = "video">
 </video>-->
  
-<button id='btn' onClick='video'><p><a class="a1"></a><p/></button>
+ <button id="btn" onclick="window.location.href = '  https://futureimagecomics.com/';">Home</button>
+  <button id="btn2" onclick="video';">Camera</button>
 <div style='position: absolute; top: 10px; width:100%; text-align: center; z-index: 1;'>
 
 
@@ -222,9 +235,8 @@
 				    specular: 0x211111,
 //transparent : true,
 		//opacity: 0.9,
-		   
+		   map: textureLoader.load('Images/pooh_new_diffuse.jpg'),
 				//map: textureLoader.load('Images/ph_diffuse_a!.jpg'),
-				map: textureLoader.load('Images/pooh_new_diffuse.jpg'),
 				 //	side: THREE.DoubleSide,
                                 emissive: 0x154360,
 								color: 0x996633,
